--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,7 +71,7 @@ juce_add_plugin("${PROJECT_NAME}"
     # Change me!
     # A unique four-character plugin id
     # Note: this must have at least one upper-case character
-	PLUGIN_CODE PLDS
+	PLUGIN_CODE AAPD
     FORMATS "${FORMATS}"
 
     # The name of your final executable
