workflow: turn windows on

--- a/.github/workflows/cmake_ctest.yml
+++ b/.github/workflows/cmake_ctest.yml
@@ -35,10 +35,10 @@ jobs:
             os: macos-12
             pluginval-binary: pluginval.app/Contents/MacOS/pluginval
             ccache: ccache
-          #- name: Windows
-          #  os: windows-latest
-          #  pluginval-binary: ./pluginval.exe
-          #  ccache: sccache
+          - name: Windows
+            os: windows-latest
+            pluginval-binary: ./pluginval.exe
+            ccache: sccache
 
     steps:
 
